# Structured-CDM

./: README.md  pyproject.toml  train.py
scripts/: run_train.py
src/struct_cdm/: __init__.py  _cli.py  model.py  predictor.py  prior.py  train.py
src/struct_sdfm/: _cli.py  train.py
