[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "struct-sdfm"
version = "0.1.0"
description = "Hierarchical TabICL with LCS synthetic data prior"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
]

[project.optional-dependencies]
filter = [
    # ExtraTrees learnability filter in the data prior
    "scikit-learn>=1.4",
]
dev = [
    "scikit-learn>=1.4",
    "pytest>=8",
]

[project.scripts]
struct-sdfm-train = "struct_sdfm.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
